Update to SKF 2.0.3

--- a/src/main/resources/example_federate.conf
+++ b/src/main/resources/example_federate.conf
@@ -1,13 +1,14 @@
 rtiAddress = localhost:8989
+# Change the federation and federate name to whatever is relevant for your simulation.
 federationName = SEE 2026
 federateName = Example_Federate
 federateType = Tutorial
+# Following are the expected parameters for a late-joiner SEE federate. You can leave them untouched.
 federateRole = late
 lookahead = 1000000
-# These are the parameters you want for a late-joiner SEE federate.
 asynchronousDelivery = false
 timeRegulating = true
 timeConstrained = true
 # Only uncomment the following line if you have any FOM module extensions. All your FOM modules are to be placed in the
-# directory mentioned below.
+# directory mentioned below (which can be set to somewhere else on your filesystem).
 # fomDirectory = src/main/resources/foms/
